<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/preference_title"
        tools:ignore="TextContrastCheck">

        <CheckBoxPreference
            android:key="auto_retry"
            android:summary="@string/auto_retry_summary"
            android:title="@string/auto_retry_title" />

        <EditTextPreference
            android:dialogTitle="@string/timer_count_dialog"
            android:key="timer_count"
            android:inputType="number"
            android:maxLength="2"
            android:summary="@string/timer_count_summary"
            android:title="@string/timer_count_title" />

        <EditTextPreference
            android:dialogTitle="@string/interval_dialog"
            android:key="interval_time"
            android:inputType="number"
            android:maxLength="2"
            android:summary="@string/interval_summary"
            android:title="@string/interval_title" />

    </PreferenceCategory>

</PreferenceScreen>